working on the road to the end guide, slight css changes

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -670,11 +670,578 @@
           <h3 id="weapon">Weapon + Shield</h3>
           <p>Text</p>
           <h3 id="other">Bracelet</h3>
-          <p></p>
+          <dl>
+            <dt>Price Identification</dt>
+          </dl>
+          <p>Bracelet price chart (<b>F</b>loor, <b>S</b>hop):</p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Buy</th>
+              <th>Sell</th>
+              <th>F</th>
+              <th>S</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>Level Lock Bracelet</td>
+              <td>3000</td>
+              <td>1500</td>
+              <td>○</td>
+              <td>×</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Pierce Bracelet</td>
+              <td rowspan="3">4000</td>
+              <td rowspan="3">2000</td>
+              <td>○</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>No Control Bracelet</td>
+              <td>○</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Dragon Tile Bracelet</td>
+              <td>×</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Salty Bracelet</td>
+              <td rowspan="5">5000</td>
+              <td rowspan="5">2500</td>
+              <td>○</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Bend Bracelet</td>
+              <td>○</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Breadcrumb Bracelet</td>
+              <td>○</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Heal Bracelet</td>
+              <td>×</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Song Bracelet</td>
+              <td>○</td>
+              <td>×</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Strength Bracelet</td>
+              <td>5000</td>
+              <td>3400</td>
+              <td>○</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Bullseye Bracelet</td>
+              <td>7500</td>
+              <td>3000</td>
+              <td>×</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Phantasm Bracelet</td>
+              <td rowspan="2">10000</td>
+              <td rowspan="2">5000</td>
+              <td>×</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Scout Bracelet</td>
+              <td>○</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Paper Thin Bracelet</td>
+              <td rowspan="4">15000</td>
+              <td rowspan="4">7500</td>
+              <td>×</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Parry Bracelet</td>
+              <td>×</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>No Hunger Bracelet</td>
+              <td>×</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Hunger Bracelet</td>
+              <td>×</td>
+              <td>○</td>
+              <td></td>
+            </tr>
+          </table>
+          <p>Identified by price:</p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Buy</th>
+              <th>Sell</th>
+            </tr>
+            <tr>
+              <td>Level Lock Bracelet</td>
+              <td>3000</td>
+              <td>1500</td>
+            </tr>
+            <tr>
+              <td>Strength Bracelet</td>
+              <td>5000</td>
+              <td>3400</td>
+            </tr>
+            <tr>
+              <td>Bullseye Bracelet</td>
+              <td>7500</td>
+              <td>3000</td>
+            </tr>
+            <tr>
+              <td>Scout Bracelet</td>
+              <td rowspan="2">10000</td>
+              <td rowspan="2">5000</td>
+            </tr>
+            <tr>
+              <td>Phantasm Bracelet</td>
+            </tr>
+          </table>
+          <p>Shop exclusive bracelets:</p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Buy</th>
+              <th>Sell</th>
+            </tr>
+            <tr>
+              <td>Dragon Tile Bracelet</td>
+              <td>4000</td>
+              <td>2000</td>
+            </tr>
+            <tr>
+              <td>Heal Bracelet</td>
+              <td>5000</td>
+              <td>2500</td>
+            </tr>
+            <tr>
+              <td>Bullseye Bracelet</td>
+              <td>7500</td>
+              <td>3000</td>
+            </tr>
+            <tr>
+              <td>Phantasm Bracelet</td>
+              <td>10000</td>
+              <td>5000</td>
+            </tr>
+            <tr>
+              <td>Hunger Bracelet</td>
+              <td rowspan="4">15000</td>
+              <td rowspan="4">7500</td>
+            </tr>
+            <tr>
+              <td>No Hunger Bracelet</td>
+            </tr>
+            <tr>
+              <td>Paper Thin Bracelet</td>
+            </tr>
+            <tr>
+              <td>Parry Bracelet</td>
+            </tr>
+          </table>
+          <dl>
+            <dt>Equip Identification</dt>
+          </dl>
+          <p>Text</p>
+          <p>Identified by equipping:</p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Effect</th>
+            </tr>
+            <tr>
+              <td>Strength Bracelet</td>
+              <td>Strength increased by 3 points.</td>
+            </tr>
+            <tr>
+              <td>Scout Bracelet</td>
+              <td>Monster and item locations appeared on the map.</td>
+            </tr>
+            <tr>
+              <td>Phantasm Bracelet</td>
+              <td>You were able to move inside a wall.</td>
+            </tr>
+          </table>
+          <p>Identified after some turns pass:</p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Effect</th>
+            </tr>
+            <tr>
+              <td>Breadcrumb Bracelet</td>
+              <td>Dropped an item while walking.</td>
+            </tr>
+            <tr>
+              <td>Heal Bracelet</td>
+              <td>HP recovery speed increased / hunger rate became faster.</td>
+            </tr>
+            <tr>
+              <td>Hunger Bracelet</td>
+              <td>Hunger rate became faster, checking after 10 turns.</td>
+            </tr>
+            <tr>
+              <td>No Hunger Bracelet</td>
+              <td>Hunger stopped, checking after 10 turns.</td>
+            </tr>
+            <tr>
+              <td>Paper Thin Bracelet</td>
+              <td>Started evading enemy attacks more often.</td>
+            </tr>
+          </table>
+          <p>Identified by throwing an item or shooting an arrow:</p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Effect</th>
+            </tr>
+            <tr>
+              <td>Pierce Bracelet</td>
+              <td>Item flew through walls and other objects.</td>
+            </tr>
+            <tr>
+              <td>Bend Bracelet</td>
+              <td>Item curved after hitting a wall.</td>
+            </tr>
+            <tr>
+              <td>No Control Bracelet</td>
+              <td>Shiren threw the item in a different direction.</td>
+            </tr>
+            <tr>
+              <td>Dragon Tile Bracelet</td>
+              <td>Thrown items never hit the target.</td>
+            </tr>
+          </table>
+          <p>Difficult to determine at a glance:</p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Effect</th>
+            </tr>
+            <tr>
+              <td>Level Lock Bracelet</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Salty Bracelet</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Song Bracelet</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Bullseye Bracelet</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Parry Bracelet</td>
+              <td></td>
+            </tr>
+          </table>
           <h3 id="other">Staff</h3>
-          <p></p>
+          <p>Text</p>
           <h3 id="other">Scroll</h3>
-          <p></p>
+          <p>Text</p>
+          <p>Scroll price chart (<b>F</b>loor, <b>P</b>resto, S<b>U</b>rprise, <b>S</b>hop, <b>T</b>rader):</p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Buy</th>
+              <th>Sell</th>
+              <th>F</th>
+              <th>P</th>
+              <th>U</th>
+              <th>S</th>
+              <th>T</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>Identify Scroll</td>
+              <td rowspan="4">500</td>
+              <td rowspan="4">250</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Lightning Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Blaze Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Squid Sushi Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Exorcism Scroll</td>
+              <td rowspan="6">1000</td>
+              <td rowspan="6">500</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Freeze Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Decoy Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Trap Remove Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Fear Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Escape Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Heaven Scroll</td>
+              <td rowspan="3">1200</td>
+              <td rowspan="3">600</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Earth Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Slumber Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Evaporate Scroll</td>
+              <td rowspan="2">1500</td>
+              <td rowspan="2">750</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Explosion Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Wall Collapse Scroll</td>
+              <td rowspan="2">2000</td>
+              <td rowspan="2">1000</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Sturdy Pot Scroll</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Pot Expand Scroll</td>
+              <td>2000</td>
+              <td>1100</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Suction Scroll</td>
+              <td>3000</td>
+              <td>1500</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
           <h3 id="other">Grass</h3>
           <p></p>
           <h3 id="other">Pot</h3>
