more css changes

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -117,7 +117,7 @@
                 <li><a href="#golden_interval">Speed Running</a></li>
               </ul>
             </div>
-            <div class="road_to_the_end_desc_table">
+            <div class="dungeon_desc_table">
               <table>
                 <tr>
                   <td colspan="2"><img src="/shiren2/image/dungeon/road_to_the_end.png" width="200" height="auto"></td>
