--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -204,7 +204,7 @@
             <li>Wall Collapse Scroll</li>
             <li>Monster Pot</li>
             <li>Posession Staff</li>
-            <li>Strength Grass, Boost Grass, Grass Receive Staff, Grass Toss Staff</li>
+            <li>Strength Grass, Boost Grass, Grass Gain Staff, Grass Toss Staff</li>
             <li>Revival Grass</li>
           </ul>
           <p>Scout Bracelet is the single most effective item in the game to lower the difficulty of a dungeon.<br>Use it to avoid surprise attacks in hallways, and to identify shops or Monster Houses at a glance.<br>Unequip it before fighting monsters to help prevent it from cracking.</p>
@@ -214,7 +214,7 @@
           <p>Monster Pots can be used to capture an Armordillo Pop, which can be used to obtain a ridiculous amount of items.<br>If you find one early in the dungeon, level up an Armordillo Bro (5~6F) using an item like Happy Staff to capture a Pop.<br>If you don't have a way to level up an Armordillo Bro, you could go ahead and capture the Bro instead.<br>However, you'll need to be extra careful with how you handle it to keep it alive.<br>Watch out for things like Nigiri Morph's special attack and Trip Stones so that you don't lose the Monster Pot.</p>
           <p>If you find a Monster Pot after 6F, you could wait until Armordillo Pop can be found naturally between 30~39F,<br>or capture a different monster like Shihan, Monsoon Doll, Hyper Gazer, Gazelle Pope, Water Shinryu,<br>Stun Scorpion, Emperor Tusker, or Tiny Phoenix. Shihan is likely the second choice, as it can hold its own<br>in fights thanks to its high stats, and can be used to obtain Scout Bracelets and other equipment.</p>
           <p>Posession Staff can be used to level monsters (have the target monster defeat the monster you're controlling)<br>and obtain items (take control of Armordillo or Kengo family monsters), among other uses.<br>This is often your go-to item to collect items between 5~6F where Armordillos appear.<br>This staff doesn't cost much (6 uses = 650G), so be sure to buy it if you see it in a shop.</p>
-          <p>Strength Grass, Boost Grass, and either Grass Receive Staff or Grass Toss Staff<br>can be used in combination to quickly increase Shiren's strength.<br>Strength plays a key role in damage calculation in Shiren 2, so it's important to increase it when possible.<br>Dealing more damage means you'll restore more HP per attack from Healing Sword (回 seal) as well.</p>
+          <p>Strength Grass, Boost Grass, and either Grass Gain Staff or Grass Toss Staff<br>can be used in combination to quickly increase Shiren's strength.<br>Strength plays a key role in damage calculation in Shiren 2, so it's important to increase it when possible.<br>Dealing more damage means you'll restore more HP per attack from Healing Sword (回 seal) as well.</p>
           <p>Shiren 2 doesn't have pots or scrolls that can restore HP, so it's important<br>to make use of Otogiriso and Revival Grass in ways that aren't wasteful.</p>
           <h3 id="weapon">Weapon</h3>
           <h4>Main Weapon</h4>
@@ -581,10 +581,10 @@
           </dl>
           <h3 id="other">Staff</h3>
           <dl>
-            <dt>Grass Receive Staff</dt>
-            <dd></dd>
+            <dt>Grass Gain Staff</dt>
+            <dd>Insert Strength Grass to increase max strength.<br>Other grasses like Angel Seed, Happy Grass, Life Grass, and Warp Grass can be used,<br>however Strength Grass should be prioritized, since strength is a large factor in Shiren 2's damage calculation.<br>To get one more use out of a "Strength Gain Staff[0]", throw it at a Tonosamadon to have it reflect the staff,<br>or use a Bend Bracelet and throw it at a wall so that it curves around and hits Shiren.<br>Don't forget to eat Boost Grass before swinging it to double the gains.</dd>
             <dt>Grass Toss Staff</dt>
-            <dd></dd>
+            <dd>Trickier to use than Grass Gain Staff, but can be used in a similar manner by swinging it at monsters that reflect magic.<br>Such monsters include Taishodon, Escargon, Asst. Manager, and Manager.<br>Make use of Tiger Tossers or Bomb type monsters to level up a Shopkeeper.<br>Other grasses like Poison Grass, Twisty Grass, and Warp Grass can be inserted, but Strength Grass should be prioritized.</dd>
             <dt>Miss Staff</dt>
             <dd></dd>
             <dt>Fire Staff</dt>
@@ -4493,7 +4493,7 @@
                 <td>☆</td>
                 <td></td>
                 <td></td>
-                <td>Grass Receive Staff</td>
+                <td>Grass Gain Staff</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
