--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -2731,7 +2731,7 @@
                 <td>☆</td>
                 <td></td>
                 <td></td>
-                <td>Grass Receive Staff</td>
+                <td>Grass Gain Staff</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
