--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -681,7 +681,7 @@
                   <td>1620</td>
                 </tr>
                 <tr>
-                  <td><a href="/shiren2/html/item/staff.html#grass_receive_staff">Grass Receive Staff</a></td>
+                  <td><a href="/shiren2/html/item/staff.html#grass_receive_staff">Grass Gain Staff</a></td>
                   <td>70</td>
                   <td>1400</td>
                   <td>1470</td>
